# AstralEngine

./: .gitignore  Build.bat  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Ressources/Shaders/: TriangleVert.vert
Ressources/Tools/: CompileGLSLShaders.bat
Source/: Application.cpp  Application.h  Engine.cpp  EntryPoint.cpp
Source/Editor/Tests/: DebugMain.cpp  DebugMain.h  DebugTick.cpp  DebugTick.h  TestEngine.cpp  TestEngine.h
Source/Runtime/Configs/: ApplicationRegistries.cpp  ApplicationRegistries.h  AstralEngineStatics.cpp  AstralEngineStatics.h  ConfigUtils.cpp  ConfigUtils.h
Source/Runtime/Core/Engine/: Engine.cpp  Engine.h
Source/Runtime/Core/Entities/: Entity.cpp  Entity.h
Source/Runtime/Core/Maths/: Vector2D.h  Vector3D.h
Source/Runtime/Core/Objects/: BaseObject.cpp  BaseObject.h
Source/Runtime/Core/ReflectionSystem/: Field.cpp  Field.h  RTTI.h
Source/Runtime/Core/Systems/: ObjectManager.cpp  ObjectManager.h
Source/Runtime/Core/Utils/: Factory.h  FilerHelpers.cpp  FilerHelpers.h  GameplayStatics.cpp  GameplayStatics.h  Macro.h
Source/Runtime/CoreObjects/: ObjectManager.cpp  ObjectManager.h
Source/Runtime/CoreObjects/Components/: Component.h
Source/Runtime/CoreObjects/Entities/: Entity.cpp  Entity.h
Source/Runtime/CoreObjects/Objects/: BaseObject.cpp  BaseObject.h
Source/Runtime/Engine/: Engine.cpp  Engine.h
Source/Runtime/Engine/CoreObjects/: ObjectManager.cpp  ObjectManager.h
Source/Runtime/Engine/Engine/: Engine.cpp  Engine.h
Source/Runtime/Engine/Implementations/: SFMLEngine.cpp  SFMLEngine.h
Source/Runtime/Engine/Statics/: GameplayStatics.cpp  GameplayStatics.h
Source/Runtime/Engine/Time/: AstralClock.cpp  AstralClock.h  TimerHandle.cpp  TimerHandle.h  TimerManager.cpp  TimerManager.h
Source/Runtime/Engine/World/: World.cpp  World.h
Source/Runtime/Inputs/: InpuManager.h
Source/Runtime/Inputs/Components/: InputComponent.cpp  InputComponent.h
Source/Runtime/Inputs/Implementations/: SFMLInputManager.cpp  SFMLInputManager.h
Source/Runtime/Inputs/Objects/: InputAction.cpp  InputAction.h
Source/Runtime/Inputs/Systems/: InpuManager.cpp  InpuManager.h
Source/Runtime/Inputs/Utils/: InputUtils.cpp  InputUtils.h
Source/Runtime/Maths/: Maths.cpp  Maths.h  Matrix.h  Transform.h  Vector2D.h
Source/Runtime/Maths/BaseTypes/: Matrix.h  Matrix.inl  Quaternion.h  Quaternion.inl  Rotator.h  Rotator.inl  Vector.h  Vector.inl  Vector2D.h  Vector2D.inl  Vector3D.h  Vector3D.inl
Source/Runtime/Maths/Transforms/: Transform.h  Transform2D.cpp  Transform2D.h
Source/Runtime/Maths/Utils/: BaseTypesForward.h  CoreIncludes.h  MathUtility.h
Source/Runtime/RTTI/: Field.cpp  Field.h  RTTI.h
Source/Runtime/ReflectionSystem/: Field.cpp  Field.h  RTTI.cpp  RTTI.h
Source/Runtime/Render/Components/: SFMLSpriteRenderer.cpp  SFMLSpriteRenderer.h
Source/Runtime/Render/RenderAPIs/: Renderer.cpp  Renderer.h
Source/Runtime/Render/ShaderSystem/: Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h
Source/Runtime/Render/Systems/: RenderManager.cpp  RenderManager.h
Source/Runtime/Serialization/: Archive.h  ParserBase.h  SerializationTypes.h
Source/Runtime/Serialization/Archive/: Archive.cpp  Archive.h  ArchiveNode.cpp  ArchiveNode.h  SerializableField.h
Source/Runtime/Serialization/BinaryParsers/: BaseBinaryParser.cpp  BaseBinaryParser.h
Source/Runtime/Serialization/Parsers/: ParserBase.h
Source/Runtime/Serialization/StringParsers/: BaseStringParser.cpp  BaseStringParser.h
Source/Runtime/Serialization/Utils/: SerializationUtils.cpp  (+1 more)
Source/Runtime/Statics/: GameplayStatics.cpp  GameplayStatics.h
Source/Runtime/Time/: AstralClock.cpp  AstralClock.h  TimerHandle.cpp  TimerHandle.h  TimerManager.cpp  TimerManager.h
Source/Runtime/Utils/: Array.h  Delegate.h  EnumUtils.h  Factory.h  Macro.h  Map.h  TemplateUtils.h
Source/Runtime/Window/: Window.cpp  Window.h
(+168 files in other folders)
